# virtual-ba-concept

./: .env.example  .project-structure  .project_structure  .schema  _gpt_output.py  conftest.py  project.toml  pyproject.toml  requirements.txt  setup_db.py  test_apis.py  test_process_repository.py  test_tools_only.py  test_workflow.py
__old/: README_TESTING.md  _gpt_output.py
agent/: decider.py  langgraph_runner.py  router.py  state_schema.py
agent/model/: model.py  model_settings.py
agent/tools/: __init__.py  calculate_metrics.py  fill_knowledge_gap.py  generate_advisory.py  query_qa.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  processes.py  projects.py  users.py  workflows.py
app/core/: _gpt_output.py  config.py  log.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  access.py  metrics.py  process.py  project.py  user.py
app/repositories/: access.py  metrics.py  process.py  project.py  report.py  user.py
app/schemas/: access.py  auth.py  common.py  metric.py  process.py  project.py  report.py  user.py
app/services/: access_service.py  analysis_service.py  metrics_calculator.py  process_service.py  project_service.py  user_service.py
app/workflows/: checkpointer.py  graph.py  llm.py  models.py  state.py
docs/: roles.md
test_data/: first_cut.json  invoice_processing.json
tests/: test_metrics_calculator.py
tests/workflows/: test_graph.py  test_llm_selection.py  test_real_llm.py
tests/workflows/test_data/: client_onboarding.json  product_taxonomy.json
